--- a/index.html
+++ b/index.html
@@ -1,76 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            tailwind.config = {
-                theme: {
-                    extend: {
-                        colors: {
-                            background: 'hsl(var(--background))',
-                        },
-                    },
-                },
-            }
-        </script>
+        <style>
+            body { margin: 0; background: hsl(220 20% 7%); }
+            #matrix-rain { position: absolute; width: 100%; height: 100%; }
+        </style>
     </head>
-    <body class="bg-background">
-         <canvas id="matrix-rain" class="absolute inset-0 w-full h-full"></canvas>
+    <body>
+        <canvas id="matrix-rain"></canvas>
 
         <script>
-            (function() {
-                const canvas = document.getElementById('matrix-rain');
-                const ctx = canvas.getContext('2d');
-                const chars = 'アイウエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワヲン0123456789';
-                const fontSize = 14;
-                let columns, rows, drops, mapCols, mapRows, mapOffsetX, mapOffsetY;
-               
-                function init() {
-                    canvas.width = canvas.offsetWidth;
-                    canvas.height = canvas.offsetHeight;
-                    columns = Math.floor(canvas.width / fontSize);
-                    rows = Math.floor(canvas.height / fontSize);
-                    drops = Array.from({length: columns}, () => Math.random() * -canvas.height / fontSize);
+            const canvas = document.getElementById('matrix-rain');
+            const ctx = canvas.getContext('2d');
+            const chars = 'アイウエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワヲン0123456789';
+            const fontSize = 14;
+            let columns, drops;
+
+            function init() {
+                canvas.width = canvas.offsetWidth;
+                canvas.height = canvas.offsetHeight;
+                columns = Math.floor(canvas.width / fontSize);
+                drops = Array.from({length: columns}, () => Math.random() * -canvas.height / fontSize);
+            }
+
+            let lastTime = 0;
+            const frameDelay = 80;
+
+            function draw(time) {
+                requestAnimationFrame(draw);
+                if (time - lastTime < frameDelay) return;
+                lastTime = time;
+
+                ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                ctx.fillStyle = 'hsla(160, 100%, 45%, 1)';
+                ctx.font = fontSize + 'px monospace';
+
+                for (let i = 0; i < columns; i++) {
+                    ctx.fillText(chars[Math.floor(Math.random() * chars.length)], i * fontSize, drops[i] * fontSize);
+                    if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
+                    drops[i]++;
                 }
+            }
 
-                let lastTime = 0;
-                const frameDelay = 80;
-
-                function draw(time) {
-                    requestAnimationFrame(draw);
-                    if (time - lastTime < frameDelay) return;
-                    lastTime = time;
-
-                    ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-                    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-                    ctx.font = fontSize + 'px monospace';
-
-                    for (let i = 0; i < columns; i++) {
-                        const char = chars[Math.floor(Math.random() * chars.length)];
-                        const row = Math.floor(drops[i]);
-
-                        ctx.fillStyle = 'hsla(160, 100%, 45%, 1)';
-                        ctx.fillText(char, i * fontSize, drops[i] * fontSize);
-                        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-                            drops[i] = 0;
-                        }
-                        drops[i]++;
-                    }
+            let lastWidth = canvas.offsetWidth;
+            window.addEventListener('resize', () => {
+                if (canvas.offsetWidth !== lastWidth) {
+                    lastWidth = canvas.offsetWidth;
+                    init();
                 }
-
-                init();
-                draw();
-                let lastWidth = canvas.offsetWidth;
-                window.addEventListener('resize', () => {
-                    const newWidth = canvas.offsetWidth;
-                    if (newWidth !== lastWidth) {
-                        lastWidth = newWidth;
-                        init();
-                    }
-                });
-            })();
+            });
+            init();
+            draw();
         </script>
     </body>
 </html>
