--- a/MatrixSaver.saver/Contents/Resources/index.html
+++ b/MatrixSaver.saver/Contents/Resources/index.html
@@ -2,91 +2,100 @@
 <html lang="en">
     <head>
         <style>
-            body { margin: 0; }
-            #matrix-rain { position: absolute; width: 100%; height: 100%; }
+            html, body { margin: 0; background: #000; }
         </style>
     </head>
     <body>
-        <canvas id="matrix-rain"></canvas>
-
+        <!-- fillStyle is ignored for fillText in WallpaperAgent's WebKit;
+             text always renders in system color (white). This SVG filter
+             converts grayscale pixels to green so the effect looks right
+             regardless of fillStyle behavior. Black stays black. -->
+        <svg width="0" height="0" style="position:absolute">
+            <defs>
+                <filter id="green" color-interpolation-filters="sRGB">
+                    <feColorMatrix type="matrix"
+                        values="0 0 0 0 0
+                                1 0 0 0 0
+                                0 0 0 0 0
+                                0 0 0 1 0"/>
+                </filter>
+            </defs>
+        </svg>
+        <canvas id="c" style="filter:url(#green)"></canvas>
         <script>
             const config = {
-                fontSize: 14,
-                fadeSpeed: 0.03,       // opacity lost per frame (lower = slower fade)
-                frameDelay: 80,        // ms between frames (lower = faster animation)
-                speedMin: 0.5,         // minimum drop speed (rows per frame)
-                speedMax: 2.0,         // maximum drop speed (rows per frame)
-                resetChance: 0.5,      // probability per frame of resetting after exiting bottom (higher = resets sooner)
-                bgColor: '#000000',
-                trailColor: 'hsl(160, 100%, 45%)',
-                headColor: 'hsla(160, 100%, 85%, 1)',
+                fontSize:    14,
+                intervalMs:  50,
+                fadeSpeed:   0.04,
+                speedMin:    0.5,
+                speedMax:    2.0,
+                resetChance: 0.5,
                 chars: 'アイウエオカキクケコサシスセソタチツテトナニヌネノハヒフヘホマミムメモヤユヨラリルレロワヲン0123456789',
             };
 
-            const canvas = document.getElementById('matrix-rain');
-            const ctx = canvas.getContext('2d');
+            const canvas = document.getElementById('c');
+            const ctx    = canvas.getContext('2d');
             let columns, drops, speeds, grid, prevHeads;
 
             function init() {
-                canvas.width = canvas.offsetWidth;
-                canvas.height = canvas.offsetHeight;
-                columns = Math.floor(canvas.width / config.fontSize);
-                drops = Array.from({length: columns}, () => Math.random() * -canvas.height / config.fontSize);
-                speeds = Array.from({length: columns}, () => config.speedMin + Math.random() * (config.speedMax - config.speedMin));
-                grid = Array.from({length: columns}, () => ({})); // grid[col][row] = char
+                canvas.width  = screen.width;
+                canvas.height = screen.height;
+                columns   = Math.floor(canvas.width / config.fontSize);
+                drops     = Array.from({length: columns}, () => Math.random() * -(canvas.height / config.fontSize));
+                speeds    = Array.from({length: columns}, () => config.speedMin + Math.random() * (config.speedMax - config.speedMin));
+                grid      = Array.from({length: columns}, () => ({}));
                 prevHeads = new Array(columns).fill(-1);
-                ctx.fillStyle = config.bgColor;
+                ctx.fillStyle = '#000000';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
             }
 
-            let lastTime = 0;
-
-            function draw(time) {
-                requestAnimationFrame(draw);
-                if (time - lastTime < config.frameDelay) return;
-                lastTime = time;
-
+            function tick() {
+                // Fade existing pixels toward black
                 ctx.globalAlpha = config.fadeSpeed;
-                ctx.fillStyle = config.bgColor;
+                ctx.fillStyle   = '#000000';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.globalAlpha = 1;
+
                 ctx.font = config.fontSize + 'px monospace';
 
                 for (let i = 0; i < columns; i++) {
-                    const x = i * config.fontSize;
+                    const x    = i * config.fontSize;
                     const head = Math.floor(drops[i]);
 
-                    ctx.fillStyle = config.trailColor;
+                    // Trail chars at 75% opacity — slightly dimmer than head
+                    ctx.globalAlpha = 0.75;
                     for (let r = Math.max(0, prevHeads[i]); r < head; r++) {
                         if (!grid[i][r]) grid[i][r] = config.chars[Math.floor(Math.random() * config.chars.length)];
                         ctx.fillText(grid[i][r], x, r * config.fontSize);
                     }
 
+                    // Head char at full brightness
                     if (head >= 0) {
+                        ctx.globalAlpha = 1;
                         if (!grid[i][head]) grid[i][head] = config.chars[Math.floor(Math.random() * config.chars.length)];
-                        ctx.fillStyle = config.headColor;
                         ctx.fillText(grid[i][head], x, head * config.fontSize);
                     }
 
                     prevHeads[i] = head;
 
                     if (drops[i] * config.fontSize > canvas.height && Math.random() < config.resetChance) {
-                        drops[i] = 0;
+                        drops[i]     = 0;
                         prevHeads[i] = -1;
                     }
                     drops[i] += speeds[i];
                 }
+
+                ctx.globalAlpha = 1;
             }
 
-            let lastWidth = canvas.offsetWidth;
-            window.addEventListener('resize', () => {
-                if (canvas.offsetWidth !== lastWidth) {
-                    lastWidth = canvas.offsetWidth;
-                    init();
-                }
-            });
             init();
-            draw();
+            const mc = new MessageChannel();
+            let lastTick = 0;
+            mc.port1.onmessage = () => {
+                const now = performance.now();
+                if (now - lastTick >= config.intervalMs) { tick(); lastTick = now; }
+                mc.port2.postMessage(null);
+            };
+            mc.port2.postMessage(null);
         </script>
     </body>
 </html>
