--- a/previews/snow.html
+++ b/previews/snow.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <canvas id="matrix-rain"></canvas>
+        <script src="matrix-rain.js"></script>
         <script>
-            const config = {
+            MatrixRain({
                 fontSize:    14,
                 fadeSpeed:   0.03,
                 frameDelay:  80,
@@ -20,8 +21,7 @@
                 trailColor:  'hsl(210, 30%, 60%)',
                 headColor:   'hsla(0, 0%, 98%, 1)',
                 chars:       '❅❆❃❊❉⚬꥟',
-            };
+            });
         </script>
-        <script src="rain-engine.js"></script>
     </body>
 </html>
