add Buy Me a Coffee link to README and landing page

--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
             box-shadow: 0 0 28px var(--green-dim), 0 0 8px var(--green-dim);
         }
 
+        .btn-coffee {
+            color: #fc0;
+            border-color: rgba(255, 204, 0, 0.3);
+            background: transparent;
+        }
+        .btn-coffee:hover {
+            background: #fc0;
+            color: #000;
+            border-color: #fc0;
+        }
+
         /* ── PREVIEWS ── */
         .previews {
             padding: clamp(4rem, 9vw, 8rem) clamp(1.5rem, 7vw, 9rem);
@@ -273,6 +284,7 @@
         <div class="hero-actions">
             <a href="https://github.com/eriktelepovsky/matrix-rain" class="btn btn-outline" target="_blank" rel="noopener">View on GitHub</a>
             <a href="screensaver/MatrixSaver.zip" class="btn btn-green" download>Download Screensaver</a>
+            <a href="https://buymeacoffee.com/eriktelepovsky" class="btn btn-coffee" target="_blank" rel="noopener">Buy Me a Coffee</a>
         </div>
     </section>
 
@@ -314,6 +326,7 @@
         <div class="footer-actions">
             <a href="https://github.com/eriktelepovsky/matrix-rain" class="btn btn-outline" target="_blank" rel="noopener" style="font-size:0.65rem;padding:0.6rem 1.2rem">GitHub</a>
             <a href="screensaver/MatrixSaver.zip" class="btn btn-green" download style="font-size:0.65rem;padding:0.6rem 1.2rem">Download .saver</a>
+            <a href="https://buymeacoffee.com/eriktelepovsky" class="btn btn-coffee" target="_blank" rel="noopener" style="font-size:0.65rem;padding:0.6rem 1.2rem">Buy Me a Coffee</a>
         </div>
     </footer>
 
